# tan_convert

./: Cargo.toml  README.md
src/: _scrap.rs  main.rs
tests/fixtures/: users.data.tan  users.json  users_converted.data.tan
