[package]
name = "tan_convert"
description = "A CLI for converting Tan text and binary files from/to other formats"
version = "0.4.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tanlang-org/tan_convert"
keywords = ["tan", "convert", "json", "cli"]
authors = ["George Moschovitis <gmosx@reizu.org>"]
edition = "2021"

[dependencies]
anyhow = "1"
clap = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tan = { path = "../tan", version = "0.4" }
tan_fmt = { path = "../tan_fmt", version = "0.4" }

[[bin]]
name = "tan-convert"
path = "src/main.rs"
